--- a/index.html
+++ b/index.html
@@ -618,13 +618,13 @@ our initiative called the Open Continuum Robotics Project.</p>
                             I made it in the acknowledgment section of the following papers and video :)
                         </p>
                         - <a href="https://youtu.be/eP06ltS-pUs">
-                            <I>
+                            <i>
                                 Continuum Robotics: Innovation inspired by Nature
                             </i>
                         </a>
-                        (Tunyalux Langsub's Master's Research Project, 2024)
+                        (<a href="https://www.tunyaluxlangsub.ca/">Tunyalux Langsub's</a> Master's Research Project, 2024)
                         - <a href="https://doi.org/10.48550/arXiv.2409.09970">
-                            <I>
+                            <i>
                                 A Non-Linear Model Predictive Task-Space Controller Satisfying Shape Constraints for Tendon-Driven Continuum Robots
                             </i>
                         </a>
