--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Continuum Robots"</i></p>
                         <p><strong>Master’s thesis</strong> supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Thesis was awarded the <a href="https://www.uni-hannover.de/fileadmin/luh/content/pressestelle/uniintern/2018/uniintern_18_11.pdf">Honoree of the NiedersachsenMetall Foundation</a> for outstanding achievements at the Faculty of Mechanical Engineering, LUH, Germany.</p>
                     </td>
                 </tr>
 
