--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <p><strong>Master’s thesis</strong> supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Thesis was awarded the <a href="https://www.uni-hannover.de/fileadmin/luh/content/pressestelle/uniintern/2018/uniintern_18_11.pdf">Honoree of the NiedersachsenMetall Foundation</a> for outstanding achievements at the Faculty of Mechanical Engineering, LUH, Germany.</p>
+                        <p>Some of the results have been published in <a href="https://doi.org/10.1109/IROS.2018.8594451">IROS 2018</a>.</p>
                     </td>
                 </tr>
 
@@ -480,6 +481,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Space"</i></p>
                         <p><strong>Bachelor’s thesis</strong> supervised by <a href="https://en.wikipedia.org/wiki/Sami_Haddadin">Prof. Dr.-Ing. Sami
                             Haddadin</a></p>
+                        <p>Some of the results have been published in <a href="https://doi.org/10.1109/IROS.2018.8594339">IROS 2018</a>.</p>
                     </td>
                 </tr>
 
