--- a/index.html
+++ b/index.html
@@ -95,6 +95,58 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--GrassmannBurgner-Kahrs_arXiv_2024b-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="82" src="images/2024_arXiv_framework_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
+                        <a href="arXiv">
+                            <papertitle>Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2024
+                        <br>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024b.pdf">paper</a>
+                        /
+                        <a href="arXiv">arXiv</a>
+                        /
+                        <a href="data/GrassmannBurgner-Kahrs_arXiv_2024b.bib">BibTex</a>
+                        <p>We propose to develop frameworks using Clarke coordinates that lead to canonical forms of the components of the frameworks.</p>
+                        &#35;Manifold &#35;Representation &#35;ContinuumRobot
+                    </td>
+                </tr>
+
+                <!--GrassmannBurgner-Kahrs_arXiv_2024a-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="82" src="images/2024_arXiv_jointLocation_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
+                        <a href="arXiv">
+                            <papertitle>Clarke Transform and Encoder-Decoder Architecture for Arbitrary Joints Locations in Displacement-Actuated Continuum Robots
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2024
+                        <br>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024a.pdf">paper</a>
+                        /
+                        <a href="arXiv">arXiv</a>
+                        /
+                        <a href="data/GrassmannBurgner-Kahrs_arXiv_2024a.bib">BibTex</a>
+                        <p>The proposed encoder-decoder architecture allows us to consider novel mechanical design while reusing existing approaches.</p>
+                        &#35;Manifold &#35;EncoderDecoder &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannSenykBurgner-Kahrs_arXiv_2024-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
