--- a/index.html
+++ b/index.html
@@ -644,6 +644,14 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
+                            - <a href="https://doi.org/10.48550/arXiv.2412.16422">
+                                <i>Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control</i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.48550/arXiv.2412.16401">
+                                <i>Clarke Transform and Encoder-Decoder Architecture for Arbitrary Joints Locations in Displacement-Actuated Continuum Robots</i>
+                            </a>
+                            <br>
                             - <a href="https://doi.org/10.48550/arXiv.2409.16501">
                                 <i>Clarke Transform — A Fundamental Tool for Continuum Robotics</i>
                             </a>
