--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>arXiv</em>, 2024
+                        <em>RoboSoft</em>, 2025
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024a.pdf">paper</a>
                         /
-                        <a href="arXiv">arXiv</a>
+                        <a href="Xplore">IEEE Xplore</a>
+                        /
+                        <a href="https://doi.org/10.48550/arXiv.2412.16401">arXiv</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_arXiv_2024a.bib">BibTex</a>
                         <p>The proposed encoder-decoder architecture allows us to consider novel mechanical design while reusing existing approaches.</p>
