--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img alt="clean-usnob" height="82" src="images/2024_arXiv_framework_tinywow.png" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
-                        <a href="arXiv">
+                        <a href="https://doi.org/10.48550/arXiv.2412.16422">
                             <papertitle>Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control
                             </papertitle>
                         </a>
@@ -113,7 +113,7 @@
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024b.pdf">paper</a>
                         /
-                        <a href="arXiv">arXiv</a>
+                        <a href="https://doi.org/10.48550/arXiv.2412.16422">arXiv</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_arXiv_2024b.bib">BibTex</a>
                         <p>We propose to develop frameworks using Clarke coordinates that lead to canonical forms of the components of the frameworks.</p>
