--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <img alt="clean-usnob" height="82" src="images/2024_arXiv_jointLocation_tinywow.png" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
-                        <a href="arXiv">
+                        <a href="Xplore">
                             <papertitle>Clarke Transform and Encoder-Decoder Architecture for Arbitrary Joints Locations in Displacement-Actuated Continuum Robots
                             </papertitle>
                         </a>
