--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>RoboSoft</em>, 2025
+                        <em>IEEE RoboSoft</em>, 2025
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024a.pdf">paper</a>
                         /
