--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </td>
                 </tr>
 
-                <!--GrassmannBurgner-Kahrs_arXiv_2024a-->
+                <!--GrassmannBurgner-Kahrs_arXiv_2024a, GrassmannBurgner-Kahrs_RoboSoft_2025-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="82" src="images/2024_arXiv_jointLocation_tinywow.png" width="160">
@@ -137,7 +137,7 @@
                         <br>
                         <em>IEEE RoboSoft</em>, 2025
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024a.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">paper</a>
                         /
                         <a href="Xplore">IEEE Xplore</a>
                         /
