--- a/index.html
+++ b/index.html
@@ -682,9 +682,15 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <p>
                             I made it in the acknowledgment section of the following papers and video :)
                         </p>
+                        - <a >
+                            <i>Parametric Design of a Tendon-Driven Continuum Robot for Industrial Application
+                            </i>
+                        </a>
+                        (IEEE RoboSoft 2025)
+                        <br>
                         - <a href="https://youtu.be/eP06ltS-pUs">
                             <i>
-                                Continuum Robotics: Innovation inspired by Nature
+                                Continuum Robotics: Innovation Inspired by Nature
                             </i>
                         </a>
                         (<a href="https://www.tunyaluxlangsub.ca/">Tunyalux Langsub's</a> Master's Research Project, 2024)
