--- a/index.html
+++ b/index.html
@@ -695,12 +695,12 @@ our initiative called the Open Continuum Robotics Project.</p>
                         </a>
                         (<a href="https://www.tunyaluxlangsub.ca/">Tunyalux Langsub's</a> Master's Research Project, 2024)
                         <br>
-                        - <a href="https://doi.org/10.48550/arXiv.2409.09970">
+                        - <a href="https://doi.org/10.1109/LRA.2025.3532159">
                             <i>
                                 A Non-Linear Model Predictive Task-Space Controller Satisfying Shape Constraints for Tendon-Driven Continuum Robots
                             </i>
                         </a>
-                        (arXiv, 2024)
+                        (IEEE RA-L, 2024)
                         <br>
                         - <a href="https://doi.org/10.1109/RoboSoft60065.2024.10522016">
                             <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
