--- a/index.html
+++ b/index.html
@@ -95,6 +95,54 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--GrassmannBurgner-Kahrs_2025-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="82" src="images/2024_arXiv_framework_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
+                        <a href="https://doi.org/10.48550/arXiv.2412.16422">
+                            <papertitle>Displacement-Actuated Continuum Robots: A Joint Space Abstraction
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <a href="paper/GrassmannBurgner-Kahrs_2025.pdf">paper</a>
+                        /
+                        <a href="data/GrassmannBurgner-Kahrs_arXiv_2024b.bib">BibTex</a>
+                        <p>We revisit and extend the displacement-actuated continuum robot to feature an increasingly popular length extension and an underutilized twisting.</p>
+                        &#35;Abstraction &#35;ContinuumRobot
+                    </td>
+                </tr>
+
+                <!--GrassmannBurgner-Kahrs_arXiv_2025-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="82" src="images/2024_arXiv_jointLocation_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
+                        <a href="Xplore">
+                            <papertitle>Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots
+                            </papertitle>
+                        </a>
+                        <br>
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2025
+                        <br>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025.pdf">paper</a>
+                        /
+                        <a href="https://doi.org/10.48550/arXiv.2503.12265">arXiv</a>
+                        /
+                        <a href="data/GrassmannBurgner-Kahrs_arXiv_2024a.bib">BibTex</a>
+                        <p>We prove that improved state parameterizations for soft and continuum robots are specific cases of Clarke coordinates.</p>
+                        &#35;Manifold &#35;Representation &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannBurgner-Kahrs_arXiv_2024b-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
