--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <!--GrassmannBurgner-Kahrs_2025-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
-                        <img alt="clean-usnob" height="82" src="images/2024_arXiv_framework_tinywow.png" width="160">
+                        <img alt="clean-usnob" height="95" src="images/2025_DACR_tinywow.jpg" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="https://doi.org/10.48550/arXiv.2412.16422">
