Add research project

--- a/index.html
+++ b/index.html
@@ -622,6 +622,45 @@ our initiative called the Open Continuum Robotics Project.</p>
                 <!-- PROJECTS -->
                 <tbody>
 
+                <!-- Continuum Robot Design and Prototyping  -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="164" src="images/Project_CR_DesignAndPrototyping_tinywow.jpg" width="160">
+                    </td>
+                    <td valign="middle" width="100%">
+                        <p><i>"Continuum Robot Design and Prototyping "</i> (<a href="https://crl.utm.utoronto.ca/_pages/design.html">link to project description</a>)</p>
+                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Relevant papers:
+                            <br>
+                            - <a href="https://doi.org/10.3389/frobt.2024.1272403">
+                                <i>Open Continuum Robotics – One Actuation Module to Create them All
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://doi.org/10.3389/frobt.2022.873446">
+                                <i>FAS - A Fully Actuated Segment for Tendon-Driven Continuum Robots
+                                </i>
+                            </a>
+                            <br>
+                            - <a href="https://openreview.net/forum?id=bYLFxFQPFtX">
+                            <i>CTCR Prototype Development: An Obstacle in the Research Community?</i>
+                            </a>
+                        </p>
+                        <p>Funding:
+                            <br>
+                            - <i>NSERC Discovery Accelerator Supplements
+                            </i>
+                            <br>
+                            - <i>Canada Foundation for Innovation, John R. Evans Leaders Fund
+                            </i>
+                            <br>
+                            - <i>Ontario Research Fund, Research Infrastructure
+                            </i>
+                        </p>
+                    </td>
+                </tr>
+
                 <!-- Open Continuum Robotics Project -->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
