Add funding to "Learning the Kinematics of Tubular Continuum Robots"

--- a/index.html
+++ b/index.html
@@ -719,6 +719,17 @@ our initiative called the Open Continuum Robotics Project.</p>
                                 </i>
                             </a>
                         </p>
+                        <p>Funding:
+                            <br>
+                            - <i>NSERC Discovery Grant (April 1, 2019 – March 31, 2025)
+                            </i>
+                            <br>
+                            - <i>NSERC Discovery Accelerator Supplements
+                            </i>
+                            <br>
+                            - <i>NSERC Discovery Launch Supplements (2019 - 2020)
+                            </i>
+                        </p>
                     </td>
                 </tr>
 
