--- a/index.html
+++ b/index.html
@@ -744,6 +744,12 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
+                            - <i>Displacement-Actuated Continuum Robots: A Joint Space Abstraction </i>
+                            <br>
+                            - <a href="https://doi.org/10.48550/arXiv.2503.12265">
+                                <i>Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots </i>
+                            </a>
+                            <br>
                             - <a href="https://doi.org/10.48550/arXiv.2412.16422">
                                 <i>Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control</i>
                             </a>
