--- a/index.html
+++ b/index.html
@@ -101,13 +101,15 @@
                         <img alt="clean-usnob" height="95" src="images/2025_DACR_tinywow.jpg" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
-                        <a href="https://doi.org/10.48550/arXiv.2412.16422">
+                        <a href="">
                             <papertitle>Displacement-Actuated Continuum Robots: A Joint Space Abstraction
                             </papertitle>
                         </a>
                         <br>
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        2025
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_2025.pdf">paper</a>
                         /
@@ -769,6 +771,14 @@ our initiative called the Open Continuum Robotics Project.</p>
                             - <a href="https://doi.org/10.1109/IROS.2018.8594339">
                                 <i>Quaternion-Based Smooth Trajectory Generator for Via Poses in SE(3) Considering Kinematic Limits in Cartesian Space</i>
                             </a>
+                        </p>
+                        <p>Funding:
+                            <br>
+                            - <i>NSERC Discovery Grant (April 1, 2019 – March 31, 2025)
+                            </i>
+                            <br>
+                            - <i>Deans Strategic Fund (DSF): Connecting the Bot
+                            </i>
                         </p>
                     </td>
                 </tr>
