--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             (in alphabetical order)
                             <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
                             <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
-                            P. T. Dewi,
+                            <a href="https://puspitadewi.com/">P. T. Dewi</a>,
                             <a href="https://www.mirmi.tum.de/en/rsi/team/haddadin-sami/">S. Haddadin</a>,
                             <a href="https://taqihamoda.github.io/">T. Hamoda</a>,
                             L. Johannsmeier,
