--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <!-- PAPER -->
                 <tbody>
 
-                <!--GrassmannBurgner-Kahrs_2025-->
+                <!--GrassmannBurgner-Kahrs_arXiv_2025a-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
                         <img alt="clean-usnob" height="95" src="images/2025_DACR_tinywow.jpg" width="160">
@@ -109,9 +109,11 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        2025
+                        arXiv, 2025
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_2025.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025a.pdf">paper</a>
+                        /
+                        <a href="https://doi.org/10.48550/arXiv.2503.16778">arXiv</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_arXiv_2024b.bib">BibTex</a>
                         <p>We revisit and extend the displacement-actuated continuum robot to feature an increasingly popular length extension and an underutilized twisting.</p>
