--- a/index.html
+++ b/index.html
@@ -95,6 +95,34 @@
                 <!-- PAPER -->
                 <tbody>
 
+                <!--MuhmannBurgner-Kahrs_et_al_arXiv_2025-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="90" src="images/2025_improvedStateRepresentation.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle;background-color:#f4f5f4" valign="middle" width="100%">
+                        <a href="Xplore">
+                            <papertitle>Toward Dynamic Control of Tendon-Driven Continuum Robots using Clarke Transform
+                            </papertitle>
+                        </a>
+                        <br>
+                        <a href="ChristianMuhmann">Christian Muhmann</a>,
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a href="https://scholar.google.com/citations?user=neeX6EoAAAAJ">Max Bartholdt</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
+                        <br>
+                        <em>arXiv</em>, 2025
+                        <br>
+                        <a href="paper/MuhmannBurgner-Kahrs_et_al_arXiv_2025.pdf">paper</a>
+                        /
+                        <a href="https://doi.org/10.48550/arXiv.2503.20693">arXiv</a>
+                        /
+                        <a href="data/MuhmannBurgner-Kahrs_et_al_arXiv_2025.bib">BibTex</a>
+                        <p>Dynamic model and robot-based evaluation for a tendon-driven continuum robot with five tendons using Clarke transfrom.</p>
+                        &#35;Manifold &#35;Dynamics &#35;ContinuumRobot
+                    </td>
+                </tr>
+
                 <!--GrassmannBurgner-Kahrs_arXiv_2025a-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
