--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
                         <heading>Research</heading>
                         <p>
                             I'm interested in continuum robotics, machine learning, and dual quaternions.
-                            Aside from that, creativity, innovation, and philosophy of science are also part of my field of interest to some extent.
+                            Aside from that, creativity, innovation, and the philosophy of science are also part of my field of interest to some extent.
                         </p>
                         <p>
                             During my research adventures, I have gratefully collaborated or am still collaborating with
                             (in alphabetical order)
+                            <a href="https://www.imes.uni-hannover.de/en/institute/team/m-sc-max-bartholdt">M. N. Bartholdt</a>,
                             <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
                             <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
                             <a href="https://puspitadewi.com/">P. T. Dewi</a>,
@@ -76,6 +77,7 @@
                             <a href="https://taqihamoda.github.io/">T. Hamoda</a>,
                             L. Johannsmeier,
                             V. Modes,
+                            M. Muhmann,
                             P. Le,
                             N. Liang,
                             <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
