--- a/index.html
+++ b/index.html
@@ -667,8 +667,13 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
+                            - <a href="https://doi.org/10.48550/arXiv.2503.20693">
+                                <i>Toward Dynamic Control of Tendon-Driven Continuum Robots using Clarke Transform
+                                </i>
+                            </a>
+                            <br>
                             - <a href="https://doi.org/10.3389/frobt.2024.1272403">
-                                <i>Open Continuum Robotics – One Actuation Module to Create them All
+                                <i>Open Continuum Robotics – One Actuation Module to Create Them All
                                 </i>
                             </a>
                             <br>
