--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         /
                         <a href="data/GrassmannSenykBurgner-Kahrs_ICRA_2024.bib">BibTex</a>
                         /
-                        <a href="images/GraphicAbstract_ICRA_2024">graphic abstract</a>
+                        <a href="images/GraphicAbstract_ICRA_2024.png">graphic abstract</a>
                         <p>We derive and investigate the lower triangular transformation matrix to disentangle the tube inequalities.</p>
                         &#35;Disentanglement &#35;Representation &#35;ContinuumRobot
                     </td>
