--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>IEEE RoboSoft</em>, 2025
+                        <em>IEEE RoboSoft</em>, 2025 (<a href="https://robosoft2025.org/spotlight/">spotlight</a>)
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">paper</a>
                         /
