--- a/index.html
+++ b/index.html
@@ -839,6 +839,33 @@ our initiative called the Open Continuum Robotics Project.</p>
             </table>
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <!-- TALKS -->
+                <tbody>
+
+                <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                        <heading>Talks</heading>
+                        <p>
+                            Invited talks (not paper presentations)
+                        </p>
+                        - <a >
+                            <i>"Clarke Transform: A Lingua Franca for Continuum Robotics"
+                            </i>
+                        </a>
+                        (<a href="https://sites.google.com/view/benchmarking-in-soft-robotics/home">"Benchmarking in Soft Robotics"</a> at IEEE RoboSoft 2025)
+                        <br>
+                        - <a >
+                            <i>"Open Continuum Robotics Project"
+                            </i>
+                        </a>
+                        (<a href="https://softperceptiverobots.it/">"Soft Continuum Manipulators, Bottlenecks, and Applications"</a> at IEEE ICRA 2024)
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <!-- ACKNOWLEDGMENT -->
                 <tbody>
 
