--- a/index.html
+++ b/index.html
@@ -846,19 +846,25 @@ our initiative called the Open Continuum Robotics Project.</p>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <heading>Talks</heading>
                         <p>
-                            Invited talks (not paper presentations)
+                            Selected invited talks. Click on the title to download the slides as PDF file.
                         </p>
                         - <a >
-                            <i>"Clarke Transform: A Lingua Franca for Continuum Robotics"
+                            <i> 
+                                <a href="talks/Lingua_Franca_RoboSoft_2025.pdf">
+                                    "Clarke Transform: A Lingua Franca for Continuum Robotics" 
+                                </a>
                             </i>
                         </a>
-                        (<a href="https://sites.google.com/view/benchmarking-in-soft-robotics/home">"Benchmarking in Soft Robotics"</a> at IEEE RoboSoft 2025)
+                        (Workshop <a href="https://sites.google.com/view/benchmarking-in-soft-robotics/home">"Benchmarking in Soft Robotics"</a> at IEEE RoboSoft, 2025)
                         <br>
                         - <a >
-                            <i>"Open Continuum Robotics Project"
+                            <i>
+                                <a href="talks/OpenCR_ICRA_2024">
+                                    "Open Continuum Robotics Project"
+                                </a>
                             </i>
                         </a>
-                        (<a href="https://softperceptiverobots.it/">"Soft Continuum Manipulators, Bottlenecks, and Applications"</a> at IEEE ICRA 2024)
+                        (Workshop <a href="https://softperceptiverobots.it/">"Soft Continuum Manipulators, Bottlenecks, and Applications"</a> at IEEE ICRA, 2024)
                     </td>
                 </tr>
 
