--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <heading>Talks</heading>
                         <p>
-                            Selected invited talks. Click on the title to download the slides as PDF file.
+                            Selected invited talks. Click on the title to download the slides as a PDF file.
                         </p>
                         - <a >
                             <i> 
@@ -859,7 +859,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         - <a >
                             <i>
-                                <a href="talks/OpenCR_ICRA_2024">
+                                <a href="talks/OpenCR_ICRA_2024.pdf">
                                     "Open Continuum Robotics Project"
                                 </a>
                             </i>
@@ -882,7 +882,8 @@ our initiative called the Open Continuum Robotics Project.</p>
                             I made it in the acknowledgment section of the following papers and video :)
                         </p>
                         - <a >
-                            <i>Parametric Design of a Tendon-Driven Continuum Robot for Industrial Application
+                            <i>
+                                Parametric Design of a Tendon-Driven Continuum Robot for Industrial Application
                             </i>
                         </a>
                         (IEEE RoboSoft 2025)
@@ -902,19 +903,22 @@ our initiative called the Open Continuum Robotics Project.</p>
                         (IEEE RA-L, 2024)
                         <br>
                         - <a href="https://doi.org/10.1109/RoboSoft60065.2024.10522016">
-                            <i>A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
+                            <i>
+                                A Lightweight Modular Segment Design for Tendon-Driven Continuum Robots with Pre-Programmable Stiffness
                             </i>
                         </a>
                         (IEEE RoboSoft 2024)
                         <br>
                         - <a href="https://doi.org/10.1109/LRA.2022.3185377">
-                            <i>Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
+                            <i>
+                                Shape Representation and Modeling of Tendon-Driven Continuum Robots Using Euler Arc Splines
                             </i>
                         </a>
                         (IEEE RA-L, 2022)
                         <br>
                         - <a href="https://doi.org/10.48550/arXiv.2011.12460">
-                            <i>Experiments in Autonomous Driving Through Imitation Learning
+                            <i>
+                                Experiments in Autonomous Driving Through Imitation Learning
                             </i>
                         </a>
                         (arXiv, 2020)
