Update EncoderDecoder entry

--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                         <a href="https://doi.org/10.48550/arXiv.2412.16401">arXiv</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_arXiv_2024a.bib">BibTex</a>
+                        /
+                        <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025_Slides.pdf">slides</a>
+                        /
+                        <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025_Poster.pdf">poster</a>
                         <p>The proposed encoder-decoder architecture allows us to consider novel mechanical design while reusing existing approaches.</p>
                         &#35;Manifold &#35;EncoderDecoder &#35;ContinuumRobot
                     </td>
