--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     </td>
                     <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
                         <a href="http://www.opencontinuumrobotics.com">
-                            <papertitle>Open Continuum Robotics – One Actuation Module to Create them All
+                            <papertitle>Open Continuum Robotics – One Actuation Module to Create Them All
                             </papertitle>
                         </a>
                         <br>
@@ -323,6 +323,8 @@
                         <a href="https://doi.org/10.3389/frobt.2024.1272403">Front. Robot. AI</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_Frontiers_2024.bib">BibTex</a>
+                        /
+                        <a href="https://www.youtube.com/watch?v=0MefE64Gw0U">YouTube</a>
                         /
                         <a href="http://www.opencontinuumrobotics.com">OpenCR Project</a>
                         <p>To democratize continuum robots research, we propose an actuation module to build torque-controlled continuum robots and provide open-source software and hardware with
