--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@ our initiative called the Open Continuum Robotics Project.</p>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_IROS_2022.bib">BibTex</a>
                         /
+                        <a href="https://www.youtube.com/watch?v=vP3yqEIiH-Q">YouTube</a>
+                        /
                         <a href="https://github.com/ContinuumRoboticsLab/CRL-Dataset-CTCR-Pose">GitHub</a>
                         <p>We provide the first public dataset for a three-tube CTCR to democratize research on
                             learning-based and physics-based modelling of the kinematics.</p>
