--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                             the <a href="https://crl.utm.utoronto.ca/">Continuum Robotics Laboratory</a> at the
                             University of Toronto, Canada.
                             I work on continuum robotics and machine learning.
-                            Before all that, I completed a B.Sc. and a M.Sc. Degree in Mechatronics at the <a
+                            Before all that, I completed a B.Sc. and an M.Sc. Degree in Mechatronics at the <a
                                 href="https://www.uni-hannover.de/en/">Leibniz University Hannover</a>, Germany in 2016
                             and 2018, respectively.
-                            From 2018 to 2019 I worked as a research assistant at the Lehrstuhl fuer Kontinuumsrobotik
+                            From 2018 to 2019, I worked as a research assistant at the Lehrstuhl fuer Kontinuumsrobotik
                             at the Leibniz University Hannover.
                         </p>
                         <p style="text-align:center">
@@ -67,7 +67,7 @@
                             Aside from that, creativity, innovation, and the philosophy of science are also part of my field of interest to some extent.
                         </p>
                         <p>
-                            During my research adventures, I have gratefully collaborated or am still collaborating with
+                            During my research adventures, I have gratefully collaborated with or am still collaborating with
                             (in alphabetical order)
                             <a href="https://www.imes.uni-hannover.de/en/institute/team/m-sc-max-bartholdt">M. N. Bartholdt</a>,
                             <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
@@ -77,7 +77,7 @@
                             <a href="https://taqihamoda.github.io/">T. Hamoda</a>,
                             L. Johannsmeier,
                             V. Modes,
-                            M. Muhmann,
+                            Ch. Muhmann,
                             P. Le,
                             N. Liang,
                             <a href="https://www.cs.toronto.edu/~slilge/">S. Lilge</a>,
@@ -261,7 +261,7 @@
                         <a href="paper/Clarke_Transform_Cheat_Sheet.pdf">Cheat Sheet</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2409.13826">extended abstract (arXiv)</a>
-                        <p>We propose the Clarke transform and Clarke coordinates enabling the development of methods on the two-dimensional manifold embedded in the n-dimensional joint space.</p>
+                        <p>We propose the Clarke transform and Clarke coordinates, enabling the development of methods on the two-dimensional manifold embedded in the n-dimensional joint space.</p>
                         &#35;Manifold &#35;Representation &#35;ContinuumRobot
                     </td>
                 </tr>
@@ -390,7 +390,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_Frontiers_2022.bib">BibTex</a>
                         <p>To achieve variable tendon routing, we propose a segment design that combines two distinct characteristics of tendon-driven
-                            continuum robots, i.e. variable length and non-straight tendon routing, into a single
+                            continuum robots, i.e., variable length and non-straight tendon routing, into a single
                             segment by enabling rotation of its backbone.</p>
                         &#35;Design &#35;VariableTendonRouting &#35;ContinuumRobot
                     </td>
@@ -420,8 +420,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">IEEE Xplore</a>
                         /
                         <a href="data/LiangBurgner-Kahrs_et_al_ICRA_2021.bib">BibTex</a>
-                        <p>We introduce methodologies to compute the inverse kinematics for concentric tube continuum
-                            robots from a desired shape as input.</p>
+                        <p>We introduce methodologies to compute the inverse kinematics for concentric tube continuum robots from a desired shape as input.</p>
                         &#35;MachineLearning &#35;ShapeRepresentation &#35;ContinuumRobot
                     </td>
                 </tr>
@@ -454,8 +453,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <a href="https://www.youtube.com/watch?v=H3UjwT7rNns">YouTube</a>
                         /
                         <a href="data/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.bib">BibTex</a>
-                        <p>We discuss the impact of the current habit of developing a variety of different prototypes on
-                            the emergence of a ubiquitous robotic platform.</p>
+                        <p>We discuss the impact of the current habit of developing a variety of different prototypes on the emergence of a ubiquitous robotic platform.</p>
                         &#35;SystemThinking &#35;ContinuumRobot
                     </td>
                 </tr>
