update text blurb

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                             <name>Reinhard M. Grassmann</name>
                         </p>
                         <p>
-                            I am a Ph.D. Candidate with the Department of Computer Science and a research assistant with
+                            I am currently looking for a postdoc position.
+                            I obtained my Ph.D. in the Department of Computer Science working at
                             the <a href="https://crl.utm.utoronto.ca/">Continuum Robotics Laboratory</a> at the
                             University of Toronto, Canada.
-                            I work on continuum robotics and machine learning.
+                            I worked on continuum robotics, machine learning, and fundamental transformation.
                             Before all that, I completed a B.Sc. and an M.Sc. Degree in Mechatronics at the <a
                                 href="https://www.uni-hannover.de/en/">Leibniz University Hannover</a>, Germany in 2016
                             and 2018, respectively.
@@ -64,7 +65,7 @@
                         <heading>Research</heading>
                         <p>
                             I'm interested in continuum robotics, machine learning, and dual quaternions.
-                            Aside from that, creativity, innovation, and the philosophy of science are also part of my field of interest to some extent.
+                            Aside from that, creativity, innovation, embodied intelligence, and the philosophy of science are also part of my field of interest to some extent.
                         </p>
                         <p>
                             During my research adventures, I have gratefully collaborated with or am still collaborating with
