--- a/index.html
+++ b/index.html
@@ -601,6 +601,29 @@ our initiative called the Open Continuum Robotics Project.</p>
                 <!-- THESES -->
                 <tbody>
 
+                <!-- Doktorarbeit -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="80" src="images/Thesis_PhD_tinywow.png" width="160">
+                    </td>
+                    <td style="background-color:#f4f5f4" valign="middle" width="100%">
+                        <p><i>"Towards Open Continuum Robotics"</i></p>
+                        <p><strong>Ph.D. thesis</strong> supervised by <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Some of the results have been published in
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.pdf">RSS (WS) 2020</a>,
+                            <a href="http://roboticsproceedings.org/rss15/p17.pdf">RSS 2019</a>,
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannBurgner-Kahrs_et_al_IROS_2022.pdf">IROS 2022</a>,
+                            <a href="https://www.frontiersin.org/articles/10.3389/frobt.2022.873446/pdf">Frontiers 2022</a>,
+                            <a href="https://www.frontiersin.org/journals/robotics-and-ai/articles/10.3389/frobt.2024.1272403/pdf">Frontiers 2024</a>,
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">ICRA 2024</a>, and
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">RoboSoft 2025</a>, or are currently under review (
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannSenykBurgner-Kahrs_arXiv_2024.pdf">arXiv 2024</a> and
+                            <a href="https://reinhardgrassmann.github.io/paper/GrassmannBurgner-Kahrs_arXiv_2024b.pdf">arXiv 2024b</a>).
+                        </p>
+                    </td>
+                </tr>
+
                 <!-- Masterarbeit -->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
